--- a/_posts/2024-11-04-序列帧动画Shader.md
+++ b/_posts/2024-11-04-序列帧动画Shader.md
@@ -26,13 +26,19 @@ uniform sampler2D Texture;
 uniform float BlendIntensity;
 
 varying vec2 vTexCoord;
-varying vec2 AnimUV;
+
 void main()
 {
+    vec2 AnimUV ;
+
+    AnimUV = vec2(vTexCoord.x/TextureScale.x,vTexCoord.y/TextureScale.y);
+    AnimUV.x += indexX/TextureScale.x;
+    AnimUV.y += (TextureScale.y-1.0-indexY)/TextureScale.y;//反转方向
+
     vec4 color = texture2D(Texture, AnimUV);
     
-    gl_FragColor.rgb = color.rgb ;
-    gl_FragColor.a   = BlendIntensity;
+    gl_FragColor = color * BlendIntensity;
+ 
 }
 ```
 
